Some 1.1.1 stuff that was missed in the merge